k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-bluegreen
  labels:
    app: shopswift
    project: blue-green-deployment
