k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopswift-blue-service
  namespace: ecommerce-bluegreen
  labels:
    app: shopswift
    environment: blue
spec:
  type: ClusterIP
  selector:
    app: shopswift
    environment: blue
  ports:
    - name: http
      port: 80
      targetPort: 3000
