k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopswift-green-service
  namespace: ecommerce-bluegreen
  labels:
    app: shopswift
    environment: green
spec:
  type: ClusterIP
  selector:
    app: shopswift
    environment: green
  ports:
    - name: http
      port: 80
      targetPort: 3000
