k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopswift-ingress
  namespace: ecommerce-bluegreen
  labels:
    app: shopswift
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: shopswift.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopswift-blue-service
                port:
                  number: 80
